samples/_failures_safe/1761496171_3a8a02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_443abbd6.c: In function ‘main’:
./samples/SAFE/__tmp_443abbd6.c:187:31: error: expected ‘)’ at end of input
  187 |         if (len > 0 && command
      |            ~                  ^
      |                               )
./samples/SAFE/__tmp_443abbd6.c:187:9: error: expected declaration or statement at end of input
  187 |         if (len > 0 && command
      |         ^~
./samples/SAFE/__tmp_443abbd6.c:187:9: error: expected declaration or statement at end of input
